<resources>
    <string name="app_name">BottomNavigation</string>
    <string name="title_home">หน้าหลัก</string>
    <string name="title_qrcode">QrCode</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_shop">ประวัติ</string>
    <string name="my_image_description">banner</string>

    <string name="home_desc1">
        พิธีเปิดงานจะมีขึ้นในวันที่ 28 ธันวาคม 2562 ตั้งแต่ เวลา 08.00 น.เป็นต้นไป ณ เวทีกลาง องค์การบริหารส่วนตำบลเข็กน้อย โดยนายสืบศักดิ์ เอี่ยมวิจารณ์ ผู้ว่าราชการจังหวัดเพชรบูรณ์ เป็นประธานในพิธี ซึ่งในวันพิธีเปิดงานนักท่องเที่ยวและผู้ร่วมงานจะได้ชมการเดินขบวนพาเหรดวัฒนธรรมม้งจาก 12 ชุมชน ของตำบลเข็กน้อย พิธีเรียกขวัญปีใหม่ม้ง โดยกลุ่มวัฒนธรรมม้งตำบลเข็กน้อย การแจกไข่เรียกขวัญ เพื่อความเป็นสิริมงคล แก่แขกผู้มีเกียรติ นักท่องเที่ยวและประชาชน จากผู้ว่าราชการจังหวัดเพชรบูรณ์ ชมการแสดงวัฒนธรรมม้งจากโรงเรียนบ้านเข็กน้อย  และเลือกช้อปและชิมอาหารอร่อย ซึ่งเป็น อาหารพื้นบ้านชาวม้ง
    </string>

    <string name="home_desc">
        ชุมชนม้งที่เข็กน้อย เป็นชุมชนม้งที่ใหญ่สุดในสยาม สำหรับงานเทศกาลปีใหม่ม้ง ประจำปี 2563 นักท่องเที่ยวหรือผู้ร่วมงาน จะได้ชมประเพณีวัฒนธรรม การละเล่น ตามประเพณีของชาวม้ง ที่เป็นเอกลักษณ์ของเข็กน้อย เช่น ประเพณีการโยนลูกช่วง การแข่งขันกีฬาพื้นบ้าน การจำหน่ายสินค้าพื้นเมือง ของขวัญ ของที่ระลึก สินค้า OTOP ตลอดงาน ทั้งในภาคกลางวันและกลางคืน และชมการแต่งกายชุดม้งที่สวยงาม พร้อมมหรสพการแสดงอื่นๆ อีกมากมาย
    </string>

    <string name="home_desc2">
        นักท่องเที่ยวหรือผู้สนใจ สามารถสอบถามรายละเอียดเพิ่มเติมได้ที่ องค์การบริหารส่วนตำบลเข็กน้อย อำเภอเขาค้อ จังหวัดเพชรบูรณ์ โทรศัพท์ 056-925 575-6
    </string>


    <string name="gallery">แกลอรี่</string>
    <string name="show">การแสดง</string>
    <string name="contact">ติดต่อเรา</string>


    <string name="history">
       x
    </string>


    <string name="history_h01">
        <b>ประวัติความเป็นมาของเข็กน้อย</b>
    </string>
    <string name="history_01">
        ประวัติความเป็นมา
ชาวเขาเผ่าม้ง ได้อพยพเข้ามาอยู่ ในเขต 3 จังหวัด ประมาณ 70 ปีมาแล้ว โดยชาวเขาชุดแรกอพยพมาจากอำเภอปัว จังหวัดน่าน ผ่านมาทางอำเภอเด่นชัย จังหวัดแพร่ และลงมาทางอำเภอตะพานหิน จังหวัดพิจิตร แล้วเดินทางมายังอำเภอหล่มเก่า จังหวัดเพชรบูรณ์ ขึ้งไปอาศัยอยู่บ้านทับเบิก เป็นชุดแรก ต่อมาได้มีชาวเขาอพยพตามมาภายหลังอีกและ ได้ขยายหมู่บ้านขึ้นเป็นบ้านป่ายาบ บ้านขี้เถ้า บ้านเข็กเก่า บ้านป่าหวาย และบ้านเล็กบ้านน้อยต่าง ๆ ในเขต จังหวัดดังกล่าว ต่อมาในปี พ.ศ. 2513 - 2515 กอ.ปค.จังหวัดเพชรบูรณ์ ได้ขอกันพื้นที่บ้านเข็กน้อยประมาณ 30 ตารางกิโลเมตร และได้อพยพชาวเขาจากศูนย์แรกรับทั้ง 3 แห่ง รวมทั้งบ้านป่าหยาบมารวมกันที่บ้านเข็กน้อย โดยมีนายโก๊ะ สืบทายาท เป็นผู้นำ พ.ศ.2518 ได้ทำการอพยพชาวเขามาจากบ้านเล่าลือมารวมกันที่บ้านเข็กน้อย เพื่อเป็นแหล่งเดียวกัน พ.ศ.2524-2525 พตท. 33 ได้เปิดยุทธการผาเมืองเกรียงไกร และผาเมืองเผด็จศึก เพื่อกวาดล้างกองกำลัง ผกค. ทำให้ ผกค.ได้รับความพ่ายแพ้ทั้งทางทหารและทางการเมือง
    </string>


    <string name="history_h02">
        พื้นที่
    </string>
    <string name="history_02">
ตำบลเข็กน้อย เป็นพื้นที่ที่มีความหนาวเย็นตลอดปี พื้นที่ส่วนใหญ่เป็นที่ราบสูง สูงจากระดับน้ำทะเลประมาณ 600-800 เมตร มีถนนลาดยาง จากบ้านเข็กน้อยถึงบ้านห้วยน้ำขาว 1 สาย

เขตพื้นที่
ทิศเหนือ ติดกับ บ้านห้วยทราย ต.ห้วยเฮี้ย อ.นครไทย จ.พิษณุโลก
ทิศใต้ ติดกับ อุทยานแห่งชาติทุ่งแสลงหลวง
ทิศตะวันออก ติดกับ ตำบลแคมป์สน อำเภอเขาค้อ จังหวัดเพชรบูรณ์
ทิศตะวันตก ติดกับ อุทยานแห่งชาติทุ่งแสลงหลวง

อาชีพ
อาชีพหลัก ทำสวนทำไร่
อาชีพเสริม ค้าขาย หัตถกรรม
สาธารณูปโภค
จำนวนครัวเรือนที่มีไฟฟ้าใช้ในเขต อบต. 1,566 ครัวเรือน คิดเป็นร้อยละ 90.00 ของพื้นที่

การเดินทาง
1. เดินทางด้วยรถยนต์ถนนหมายเลข 12 จากสี่แยกพ่อขุน อำเภอหล่มสัก ถึงตำบลเข็กน้อย ระยะทาง 35 กิโลเมตร (มาจากจังหวัดพิษณุโลก ระยะทาง 100 กิโลเมตร)
2. เดินทางจากอำเภอเขาค้อด้วยถนนแคมป์สน - สะเดาะพง ถึงตำบลเข็กน้อย รวม ระยะทาง 31 กิโลเมต

ผลิตภัณฑ์
ประเพณีปีใหม่ม้ง ผ้าปักครอสติส

    </string>


    <string name="new_year_h1">
        ปีใหม่ม้ง
    </string>
    <string name="new_year">
         ที่หมู่บ้านของชาวไทยม้งประเพณีปีใหม่ของพวกเขาตรงกับ วัน ขึ้น 1 ค่ำ เดือน 1 ของม้ง ซึ่งตรงกับปฏิทินไทยคือ ขึ้น 1 ค่ำ เดือน 2 หรือ ปฏิทินจีน คือ ขึ้น 1 ค่ำ เดือน 12 ซึ่งส่วนใหญ่จะอยู่ในระยะเวลาระหว่างเดือนธันวาคม-มกราคมของทุกปี ซึ่งในวันปีใหม่นี้ของชาวม้งจัดเป็นงานประเพณีที่ชาวม้งรอคอยอย่างใจจดใจจ่อ เนื่องจากจะเป็นการพบปะกันระหว่างกลุ่มญาติมีประเพณีขอพรจากสิ่งศักดิ์สิทธิ์และผู้อาวุโส เป็นวันที่หนุ่มๆสาวๆในหมู่บ้านจะได้เลือกคู่ มีการจัดการแข่งขันกีฬาประเพณีและการละเล่นต่างๆ เช่น ลูกข่าง ลูกช่วง และยังมีการแข่งขันล้อเลื่อนไม้ชิงแชมป์ประเทศไทยซึ่งเป็นกีฬาที่ท้าทายน่าสนใจเป็นอย่างมาก แต่นอกการละเล่นที่สร้างความสนุกสนานแล้วชาวม้งก็ไม่ลืมที่จะทำพิธีกรรมต้อนรับปีใหม่ซึ่งจัดเป็นพิธีกรรมที่ชาวม้งให้ความสำคัญกันมาก
    </string>


    <string name="marry_h1">
        แต่งงาน
    </string>

    <string name="marry">
        เมื่อฝ่ายชายและฝ่ายหญิงรู้จักกันและเกิดรักกัน ทั้ง2 คนอยากใช้ชีวิตร่วมกัน ฝ่ายชายและฝ่ายหญิงจะกลับมาบ้านของตนเอง และฝ่ายชายค่อยมาพาฝ่ายหญิงจากบ้านของฝ่ายหญิง โดยผ่านประตูผีบ้านของฝ่ายหญิง เพราะคนม้งถือและเป็นวัฒนธรรมของคนม้ง หลังจากที่ฝ่ายชายและฝ่ายหญิงกลับมาถึงบ้านของฝ่ายชาย พ่อ แม่ของฝ่ายชาย จะเอาแม่ไก่มาหมุนรอบศีรษะทั้งสองคน 3 รอบเรียกว่า “หรือข๊า” เป็นการต้อนรับคนทั้งสองเข้าบ้าน ซึ่งฝ่ายชายต้องแจ้งให้ญาติทางฝ่ายหญิงทราบภายใน 24 ชั่วโมง โดยจัดหาคน 2 คน เพื่อไปแจ้งข่าวให้พ่อแม่และญาติทางฝ่ายหญิงทราบ ว่าตอนนี้บุตรชายของเราได้พาบุตรสาวของท่านมาเป็นลูกสะใภ้ของเราแล้ว ท่านไม่ต้องเป็นห่วงบุตรสาว โดยคนที่ไปแจ้งข่าวนั้นคนม้งเรียกว่า “แม่โก๊ง”  พ่อแม่ฝ่ายหญิงจะแจ้งให้ทางฝ่ายชายว่าทราบว่าอีก 3 วันให้ “แม่โก๊ง” มาใหม่ นั้นหมายถึงว่าพ่อแม่ทางฝ่ายหญิงต้องการจัดงานแต่งงาน สมัยก่อนคนม้งมักจะอยู่กินด้วยกันก่อนสองถึง 3 เดือน หรืออาจจะเป็นปีแล้วค่อยมาจัดงานแต่ง แต่ปัจจุบันนี้สังคมเปลี่ยนไปตามยุคเทคโนโลยี ทำให้การจัดงานแต่งงานของคนม้งได้กำหนดจัดงานแต่งงานภายใน 3 วันเป็นที่นิยมกันในปัจจุบัน

        ชาวม้ง จะไม่เกี้ยวพาราสี หรือแต่งงานกับคนแซ่หรือตระกูลเดียวกันเพราะถือเป็นพี่น้องกัน ชาวม้งนิยมแต่งงาน ในระหว่างอายุ 15-19 ปี เมื่อแต่งงานกันแล้วฝ่ายหญิงจะย้ายเข้ามาอยู่ในบ้านของฝ่ายชาย ซึ่งนับเป็นการเพิ่มสมาชิกในครอบครัวชายชาวม้งอาจมีภรรยาได้มากกว่าหนึ่งคน อยู่รวมกันในบ้านของฝ่ายสามี
    </string>

    <string name="ceremony_h1">
        พิธีเข้ากรรม
    </string>

    <string name="ceremony">
        พิธีเข้ากรรมของม้งนั้นมีมาตั้งแต่บรรพบุรุษม้งเชื่อกันว่าเคราะห์กรรมมีจริง แต่ม้งนั้นก็จะสามารถหลีกเลี้ยงเคราะห์กรรมนี้ได้โดยการเข้ากรรม เข้ากรรมของชนเผ่าม้ง ก็เหมือนกับการจำกัดบริเวณไม่ให้ออกไปไหนมาไหน ห้ามคนอื่นที่ไม่ใช่สมาชิกในครอบครัวเข้ามาในบ้าน ห้ามไม่ให้พูดคุยกับคนอื่นที่ไม่ใช่สมาชิกในครอบครัว ห้ามจับต้องของมีคม ห้ามขี่รถ และขับรถทุกชนิด จนกว่าพระอาทิตย์จะลับขอบฟ้า จึงจะใช้ชีวิตได้ตามปกติ ถ้าในระหว่างเข้ากรรมอยู่นั้น สมาชิกคนไหนฝ่าฝืนข้อห้าม มักจะเกิดอุบัติเหตุกับคนผู้นั้น บางรายอาจจะเจ็บ มีบางรายอาจถึงแก่ชีวิต ชนเผ่าม้งจึงถือกันเคร่งมาก ถ้าสมาชิกคนไหน ไม่อยู่บ้าน ออกไปทำงานต่างจังหวัด ที่ไกลๆบ้านก็จะนำเอาเสื้อผ้าของคนนั้นมามัดไว้ที่เสากลางบ้าน แล้วแจ้งให้คน คนนั้นรับทราบแล้วให้ขอหยุดงาน ถ้านายจ้างไม่ให้หยุด ก็จะเลี่ยงโดยการ ขอทำอย่างอื่น ที่มีอันตรายน้อยที่สุด เคราะห์กรรมนั้น ม้งเชื่อว่ามีหลายแบบด้วยกัน สามารถแก้ได้ด้วยวิธีการที่ต่างกันไป เมื่อเจ้าบ้านเกิดอาการไม่สบายใจ หรือฝันเป็นรางร้ายก็จะไปขอให้หมอผีเสี่ยงทายดูให้ ถ้ามีเคราะห์ หมอผีจะเป็นคนบอกเองว่าเราควรแก้ด้วยวิธีการไหนบ้าง จะเข้ากรรม จะทำพิธีเพื่อสะเดาะเคราะห์ หรืออาจจะปัดเป่าเคราะห์ร้ายให้หลุดพ้นไปจากตัวเองและครอบครัว
    </string>
    <string name="compliment">เยี่ยมชม</string>
    <string name="Vister_h">ข้อมูลผู้เยี่ยมชม</string>

</resources>
