<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@drawable/bg"
    tools:context=".ui.history.HistoryAFragment"
    android:orientation="vertical">


<!--        <WebView-->
<!--            android:id="@+id/webview"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content">-->
<!--        </WebView>-->


    <TextView
        android:background="@color/colorPrimaryDark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:textAlignment="center"
        android:textColor="#FCCD00"
        android:textSize="25dp"

        android:text="@string/history_h01"/>
    <TextView
        android:background="@color/colorPrimaryDark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/normalText"

        android:text="@string/history_01"/>

    <TextView
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:textColor="#FCCD00"
        android:textSize="25dp"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/history_h02"/>
    <TextView
        android:background="@color/colorPrimaryDark"
        style="@style/normalText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/history_02"/>


</LinearLayout>