<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:background="@drawable/bg"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.home.HomeFragment"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp">

    <com.smarteist.autoimageslider.SliderView
        android:id="@+id/imageSlider"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:sliderAnimationDuration="600"
        app:sliderAutoCycleDirection="back_and_forth"
        app:sliderAutoCycleEnabled="true"
        app:sliderIndicatorAnimationDuration="600"
        app:sliderIndicatorGravity="center_horizontal|bottom"
        app:sliderIndicatorMargin="15dp"
        app:sliderIndicatorOrientation="horizontal"
        app:sliderIndicatorPadding="3dp"
        app:sliderIndicatorRadius="2dp"
        app:sliderIndicatorSelectedColor="#5A5A5A"
        app:sliderIndicatorUnselectedColor="#FFF"
        app:sliderScrollTimeInSec="1"
        app:sliderStartAutoCycle="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="0dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="ขอเชิญเที่ยวงานเทศกาลปีใหม่ม้ง ประจำปี 2563"
        android:textSize="20dp"
        android:textColor="#FCCD00"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        />


    <TextView
        android:textColor="#FFFFFF"
        android:textSize="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_desc"
        />


    <TextView
        android:textColor="#FFFFFF"
        android:layout_marginTop="20dp"
        android:textSize="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_desc1"
        />

    <TextView
        android:textColor="#FFFFFF"
        android:layout_marginTop="20dp"
        android:textSize="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_desc2"
        />

    </LinearLayout>

</LinearLayout>

</ScrollView>
